[package]
name = "hapcodec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
opengl = ["gl"]
glium = ["dep:glium"]

[dependencies]
snap = "1.1.0"
itertools = "0.10.5"
byteorder = "1.4.3"
thiserror = "1.0.37"
gl = {version="0.14.0", optional=true}
glium = {version="0.32.0", features=["unstable"], optional=true}
tracing = "0.1"
